--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,6 @@
 [mypy]
 ignore_missing_imports = False
+namespace_packages=True
 strict = True
 disallow_subclassing_any = True
 disallow_any_unimported = True
