Remove unused things

--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,6 @@ deps =
   -Urrequirements.txt
   -Urrequirements-dev.txt
 commands =
-  pytest --cov=soso --profile-svg
 usedevelop = True
 
 [testenv:lint]
@@ -21,7 +20,7 @@ deps = flake8
 
 [testenv:type]
 basepython = python3.8
-commands = mypy --strict -p soso -p tests -p examples
+commands = mypy --strict -p soso
 deps =
   -Urrequirements.txt
   -Urrequirements-dev.txt
